<resources>
    <string name="app_name">Gaming TechTrack</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu_bar">MenuBarActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="next_button">NEXT</string>
    <string name="user_name">Username</string>
    <string name="game_name">Game Name</string>
    <string name="choose_game_genre">Choose Game Genre</string>
    <string name="upload">Upload</string>
    <string name="game_review">Game Review</string>
    <string name="save">Save</string>
    <string name="review">Review	 : </string>
    <string name="user_name_review">Username : </string>

</resources>
