<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.mobile.gamereviewer.ValidateGameNameActivity">

    <include
        layout="@layout/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/anton"
        android:text="@string/game_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:textColorLink="@color/menu" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/anton"
        android:text="@string/user_name"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/colorWhite"
        android:textColorLink="@color/menu" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:background="@color/menu"
        android:fontFamily="@font/anton"
        android:text="@string/next_button"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />
</LinearLayout>
