<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.mobile.gamereviewer.AddGameActivity">

    <include
        layout="@layout/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:id="@+id/mainLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="10dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/colorText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/game_name"
                android:textColor="@color/cardview_light_background"
                android:textColorLink="@color/cardview_light_background"
                android:textSize="14sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="10dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/choose_game_genre"
                android:textColor="@color/cardview_light_background" />

            <Spinner
                android:id="@+id/game_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:entries="@array/spinnerItems"
                android:textAlignment="center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_marginBottom="10dp"
            card_view:cardBackgroundColor="@color/colorPrimaryDark">

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:textColor="@color/cardview_light_background"
                android:background="@color/colorPrimary"
                android:text="@string/upload" />

            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                app:srcCompat="@mipmap/ic_launcher" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/game_review"
                android:textColor="@color/cardview_light_background" />


            <EditText
                android:id="@+id/game_review"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textAllCaps="false"
                android:textColor="@color/cardview_light_background" />

            <RatingBar
                android:id="@+id/game_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:theme="@style/RatingBar"
                android:layout_marginTop="20dp"
                android:max="5"
                android:scaleX=".6"
                android:scaleY=".6"
                android:stepSize="0.1" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">


            <TextView
                android:id="@+id/userTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="Name"
                android:textAlignment="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/primary_dark"
                android:text="@string/save"
                android:textColor="@color/cardview_light_background" />
        </android.support.v7.widget.CardView>


    </LinearLayout>
</LinearLayout>
